--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Andrew McQueen - Project Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -196,7 +196,7 @@
 							</section> -->
 							<section>
 								<h3>School Email</h3>
-								<p><a>andrew-mcqueen@uiowa.edu</a></p>
+								<p>andrew-mcqueen@uiowa.edu</a></p>
 							</section>
 							<section>
 								<h3>Personal Email</h3>
