Added more to the project descriptions.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 										Firm Valuation</a></h2>
 									</header>
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/FirmValuationScreeshot.png?raw=true" alt="" /></a>
-									<p>Firm valuation using financial statements and DCF, EP, and DDM Models to estimate Home Depot's current share price.</p>
+									<p>Firm valuation using financial statements and DCF, EP, and DDM Models to estimate Home Depot's current share price. The evaluation includes an 
+									Excel file, which shows how we used historical data nd the financial statements to forecast the company's future value. The report includes our 
+									assumptions, findings, and recommendation.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/Home_Depot_Report_Lee_McQueen_Smith.pdf" class="button">View Report</a></li>
 									</ul>
@@ -91,7 +93,9 @@
 										Data Analysis</a></h2>
 									</header>
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis/blob/main/InternetScreenshot.png?raw=true" alt="" /></a>
-									<p>Data analysis on internet service survey data to identify trends and determine which factors significantly affected users' monthly prices.</p>
+									<p>Data analysis on internet service survey data to identify trends and determine which factors significantly affected users' monthly prices.
+									This analysis includes data visualization, supervised and unsupervised learning, some user-defined functions that could be used by those looking to
+									compare their current internet speeds and prices to others, among other things.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis/blob/main/InternetServiceDataAnalysis.html" class="button">View Code</a></li>
 									</ul>
