--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									</header>
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/FirmValuationScreeshot.png?raw=true" alt="" /></a>
 									<p>Firm valuation using financial statements and DCF, EP, and DDM Models to estimate Home Depot's current share price. The evaluation includes an 
-									Excel file, which shows how we used historical data nd the financial statements to forecast the company's future value. The report includes our 
+									Excel file, which shows how we used historical data and the financial statements to forecast the company's future value. The report includes our 
 									assumptions, findings, and recommendation.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/Home_Depot_Report_Lee_McQueen_Smith.pdf" class="button">View Report</a></li>
