--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									This analysis includes data visualization, supervised and unsupervised learning, some user-defined functions that could be used by those looking to
 									compare their current internet speeds and prices to others, among other things.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis/blob/main/InternetServiceDataAnalysis.html" class="button">View Code</a></li>
+										<li><a href="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<!--
