Added Speed Dating Project to portfolio.

--- a/index.html
+++ b/index.html
@@ -100,17 +100,19 @@
 										<li><a href="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis" class="button">View Code</a></li>
 									</ul>
 								</article>
-								<!--
+								
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">Spring 2022</span>
+										<h2><a href="#">Speed Dating<br />
+										Classification Project</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>Data science project to predict whether two people on a speed date would match, given a preliminary survey. The project includes exploratory analysis
+									of preliminary survey variables, testing of machine learning algorithms, and the eventual use of a random forest for classification. The model was used
+									to maximize hypothetical profits--for a restaurant hosting a speed dating event--using a profit curve. <br /> Programs used: Excel and Orange</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/AndrewMcQueen/SpeedDatingProject/blob/main/Speed%20Dating%20--%20Harrell%2C%20Heimendinger%2C%20Hoffman%2C%20McQueen%20(2).pdf" class="button">View Report</a></li>
 									</ul>
 								</article>
 								<article>
@@ -125,6 +127,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
+								<!--
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
