--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<h2><a href="#">Speed Dating<br />
 										Classification Project</a></h2>
 									</header>
-									<a class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a class="image fit"><img src="" alt="" /></a>
 									<p>Data science project to predict whether two people on a speed date would match, given a preliminary survey. The project includes exploratory analysis
 									of preliminary survey variables, testing of machine learning algorithms, and the eventual use of a random forest for classification. The model was used
 									to maximize hypothetical profits--for a restaurant hosting a speed dating event--using a profit curve. <br /> Programs used: Excel and Orange</p>
@@ -115,6 +115,7 @@
 										<li><a href="https://github.com/AndrewMcQueen/SpeedDatingProject/blob/main/Speed%20Dating%20--%20Harrell%2C%20Heimendinger%2C%20Hoffman%2C%20McQueen%20(2).pdf" class="button">View Report</a></li>
 									</ul>
 								</article>
+								<!--
 								<article>
 									<header>
 										<span class="date">April 14, 2017</span>
@@ -127,7 +128,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<!--
+								
 								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
