Testing whether portfolio updates.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										Data Analysis</a></h2>
 									</header>
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis/blob/main/InternetScreenshot.png?raw=true" alt="" /></a>
-									<p>Data analysis on internet service survey data to identify trends and determine which factors significantly affected users' monthly prices.
+									<p>Data analysis on INTERNET service survey data to identify trends and determine which factors significantly affected users' monthly prices.
 									This analysis includes data visualization, supervised and unsupervised learning, some user-defined functions that could be used by those looking to
 									compare their current internet speeds and prices to others, among other things.</p>
 									<ul class="actions special">
