--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/FirmValuationScreeshot.png?raw=true" alt="" /></a>
 									<p>Firm valuation using financial statements and DCF, EP, and DDM Models to estimate Home Depot's current share price. The evaluation includes an 
 									Excel file, which shows how we used historical data and the financial statements to forecast the company's future value. The report includes our 
-									assumptions, findings, and recommendation.</p>
+									assumptions, findings, and recommendation. <br /> Programs used: Excel</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/Home_Depot_Report_Lee_McQueen_Smith.pdf" class="button">View Report</a></li>
 									</ul>
@@ -93,9 +93,9 @@
 										Data Analysis</a></h2>
 									</header>
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis/blob/main/InternetScreenshot.png?raw=true" alt="" /></a>
-									<p>Data analysis on INTERNET service survey data to identify trends and determine which factors significantly affected users' monthly prices.
+									<p>Data analysis on internet service survey data to identify trends and determine which factors significantly affected users' monthly prices.
 									This analysis includes data visualization, supervised and unsupervised learning, some user-defined functions that could be used by those looking to
-									compare their current internet speeds and prices to others, among other things.</p>
+									compare their current internet speeds and prices to others, among other things. <br /> Programs used: Python (Jupyter Notebook)</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis" class="button">View Code</a></li>
 									</ul>
