Added header image for speed dating project.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<h2><a href="#">Speed Dating<br />
 										Classification Project</a></h2>
 									</header>
-									<a class="image fit"><img src="" alt="" /></a>
+									<a class="image fit"><img src="https://github.com/AndrewMcQueen/SpeedDatingProject/blob/main/Speed%20Dating%20Header%20Image.PNG?raw=true" alt="" /></a>
 									<p>Data science project to predict whether two people on a speed date would match, given a preliminary survey. The project includes exploratory analysis
 									of preliminary survey variables, testing of machine learning algorithms, and the eventual use of a random forest for classification. The model was used
 									to maximize hypothetical profits--for a restaurant hosting a speed dating event--using a profit curve. <br /> Programs used: Excel and Orange</p>
