--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 								<article>
 									<header>
 										<span class="date">Spring 2022</span>
-										<h2><a>Predictions for Dow<br />
-										Jones Stock Movements</a></h2>
+										<h2><a>Predictions for Dow Jones<br />
+										Stock Price Movements</a></h2>
 									</header>
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/Dow30StockPrediction/blob/main/Dow%2030%20Project%20Header%20Image.png?raw=true" alt="" /></a>
 									<p>Project to predict the price movement directions of Dow Jones 30 using sentiment scores and stocks' performance metrics. This project includes analysis to determine
-									relationships between, and trends related to, variables, and machine learning algorithms to predict the directions of stock prices. <br />Program(s) used: Python </p>
+									relationships between, and trends related to, variables, and machine learning algorithms to predict the directions of stock prices. <br />Language used: Python </p>
 									<ul class="actions special">
 										<!-- add href link for one of the code files (html?) and the report -->
 										<li><a href="https://github.com/AndrewMcQueen/Dow30StockPrediction/blob/main/Dow%2030%20Price%20Directions%20Report%20--%20Encarnacao%2C%20Hodges%2C%20Lee%2C%20McQueen.pdf" class="button">View Report</a></li>
@@ -97,7 +97,7 @@
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/SpeedDatingProject/blob/main/Speed%20Dating%20Header%20Image.PNG?raw=true" alt="" /></a>
 									<p>Data science project to predict whether two people on a speed date would match, given a preliminary survey. The project includes exploratory analysis
 									of preliminary survey variables, testing of machine learning algorithms, and the eventual use of a random forest for classification. The model was used
-									to maximize hypothetical profits--for a restaurant hosting a speed dating event--using a profit curve. <br /> Program(s) used: Excel and Orange</p>
+									to maximize hypothetical profits--for a restaurant hosting a speed dating event--using a profit curve. <br /> Programs used: Excel and Orange</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/SpeedDatingProject/blob/main/Speed%20Dating%20--%20Harrell%2C%20Heimendinger%2C%20Hoffman%2C%20McQueen%20(2).pdf" class="button">View Report</a></li>
 									</ul>
@@ -112,7 +112,7 @@
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/FirmValuationScreeshot.png?raw=true" alt="" /></a>
 									<p>Firm valuation using financial statements and DCF, EP, and DDM Models to estimate Home Depot's current share price. The evaluation includes an 
 									Excel file, which shows how we used historical data and the financial statements to forecast the company's future value. The report includes our 
-									assumptions, findings, and recommendation. <br /> Program(s) used: Excel</p>
+									assumptions, findings, and recommendation. <br /> Program used: Excel</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/HomeDepotFirmValuation/blob/main/Home_Depot_Report_Lee_McQueen_Smith.pdf" class="button">View Report</a></li>
 									</ul>
@@ -130,7 +130,7 @@
 									<a class="image fit"><img src="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis/blob/main/InternetScreenshot.png?raw=true" alt="" /></a>
 									<p>Data analysis on internet service survey data to identify trends and determine which factors significantly affected users' monthly prices.
 									This analysis includes data visualization, supervised and unsupervised learning, some user-defined functions that could be used by those looking to
-									compare their current internet speeds and prices to others, among other things. <br /> Programs used: Python (Jupyter Notebook)</p>
+									compare their current internet speeds and prices to others, among other things. <br /> Language used: Python (Jupyter Notebook)</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/AndrewMcQueen/InternetServiceDataAnalysis" class="button">View Code</a></li>
 									</ul>
